# Photorealistic_Rendering_and_Dynamic_Systems

./: CMakeLists.txt  Lab5.ipynb  Lab9.cc  Makefile  README.md  run.sh
app/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/RayTracer/: CMakeLists.txt  ray_tracer.cc  ray_tracer.h
src/Renderer/: CMakeLists.txt  renderer.cc  renderer.h
src/lib/: CMakeLists.txt
src/lib/Camera/: CMakeLists.txt  camera.cc  camera.h
src/lib/Geometry/: CMakeLists.txt  geometry.cc  geometry.h
src/lib/Optimal_Transport/: CMakeLists.txt  optimal_transport.cc  optimal_transport.h
src/lib/Particle_Simulation/: CMakeLists.txt  particle_simulation.cc  particle_simulation.h
src/lib/Polygon/: CMakeLists.txt  polygon.cc  polygon.h
src/lib/Ray/: CMakeLists.txt  ray.cc  ray.h
src/lib/STB/: CMakeLists.txt
src/lib/Scene/: CMakeLists.txt  scene.cc  scene.h
src/lib/Sphere/: CMakeLists.txt  sphere.cc  sphere.h
src/lib/TriangleMesh/: CMakeLists.txt  triangle_mesh.cc  triangle_mesh.h
src/lib/Vector/: CMakeLists.txt  vector.cc  vector.h
src/lib/liblbfgs/: CMakeLists.txt
tests/: CMakeLists.txt
